# apidocs-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml  test_mcp_client.py
src/api_docs_mcp_server/: __init__.py
src/api_docs_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
