[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-docs-mcp-server"
version = "1.1.0"
authors = [
    { name="MCP Server Developer", email="dev@example.com" },
]
description = "An MCP server that analyzes API documentation and recommends frontend implementation methods."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.9.0",
    "requests",
    "beautifulsoup4",
    "uvicorn",
    "pydantic",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/example/api-docs-mcp-server"
"Bug Tracker" = "https://github.com/example/api-docs-mcp-server/issues"

[project.entry-points."mcp"]
main = "api_docs_mcp_server:server"

[tool.setuptools.packages.find]
where = ["src"] 